# datasette-lambda-efs-experiment

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  poetry.toml  pyproject.toml  tasks.py
.devcontainer/: devcontainer.json  docker-compose.yml
datasette-test/: README.md  app.py  requirements.txt  samconfig.toml  template.yaml
datasette-test/.chalice/: config.json
datasette-test/datasette_lambda/: app.py  test.db
datasette-test/tests/unit/: test_handler.py
dotfiles/: .alias  .bashrc
